# wrecc

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile  README.md  rustfmt.toml
.github/workflows/: test.yml
compiler/: Cargo.toml
compiler/src/: lib.rs  parser.rs  scanner.rs  typechecker.rs
fuzzer/: .gitignore  Cargo.toml
fuzzer/inputs/: expr.c  func.c  header.c  init.c  simple.c
fuzzer/src/: main.rs
include/: ctype.h  errno.h  fcntl.h  inttypes.h  iso646.h  limits.h  locale.h  setjmp.h  signal.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
preprocessor/: Cargo.toml
preprocessor/src/: lib.rs  preprocessor.rs  scanner.rs
src/: cli_options.rs  codegen.rs  environment.rs  error.rs  interpreter.rs  lib.rs  main.rs  parser.rs  scanner.rs  temp_file.rs  token.rs  typechecker.rs  types.rs
src/codegen/: codegen.rs  environment.rs  ir.rs  mod.rs  register.rs  register_allocation.rs
src/common/: environment.rs  error.rs  expr.rs  mod.rs  stmt.rs  symbol_table.rs  token.rs  types.rs
src/typechecker/: environment.rs  mod.rs  typechecker.rs
tests/: c_testsuite.sh  integration_tests.sh  snapshot_tests.sh  util.sh
tests/fixtures/: access_incomplete.c  accessing_undeclared_var  addr_deref_successively  address_rvalue  address_rvalue.c  aggregate_qualifiers.c  alignes_stack_vars  alignes_stack_vars.c  anonymous_aggr_assign.c  arg_op_collision  arg_op_collision.c  array_indexing  array_indexing.c  array_of_funcs.c  array_overflow  array_ptr_calculations  array_ptr_equivalence  array_self_index.c  array_string_initialization.c  array_too_big.c  assigning_to_same_address  big_args  big_expr  big_expr.c  big_literals  bitwise_operations.c  braced_string_init.c  calculates_expression_stmts  calculating_with_vars  calculating_with_void  calculating_with_void.c  callbacks.c  can_access_stdlib  can_access_stdlib.c  (+216 more)
wrecc_compiler/: Cargo.toml  README.md
wrecc_compiler/src/: lib.rs
wrecc_compiler/src/compiler/: mod.rs  scanner.rs  typechecker.rs
wrecc_compiler/src/compiler/ast/: decl.rs  expr.rs  stmt.rs
wrecc_compiler/src/compiler/codegen/: ir.rs  lir.rs  mod.rs  register.rs  register_allocation.rs
wrecc_compiler/src/compiler/common/: decl.rs  environment.rs  error.rs  expr.rs  mod.rs  stmt.rs  token.rs  types.rs
wrecc_compiler/src/compiler/parser/: double_peek.rs  fold.rs  mod.rs
wrecc_compiler/src/compiler/parser/hir/: decl.rs  expr.rs  mod.rs  stmt.rs
wrecc_compiler/src/compiler/typechecker/: fold.rs  init.rs  mod.rs
wrecc_compiler/src/compiler/typechecker/mir/: decl.rs  expr.rs  mod.rs  stmt.rs
wrecc_compiler/src/compiler/wrecc_codegen/: codegen.rs  ir.rs  register.rs  register_allocation.rs
wrecc_compiler/src/compiler/wrecc_parser/: double_peek.rs  fold.rs  init_list.rs  mod.rs  parser.rs
wrecc_compiler/src/preprocessor/: mod.rs  preprocessor.rs  scanner.rs
(+206 files in other folders)
