[package]
name = "wrecc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrecc_compiler = { path = "./wrecc_compiler/" }

[[bin]]
name = "wrecc"
path = "src/main.rs"

[workspace]
members = [
  "wrecc_compiler"
]

exclude = [
  "fuzzer"
]
