[package]
name = "wrecc"
version = "0.1.0"
edition = "2021"
authors = ["Philipp Rados"]
license = "MIT"

keywords = ["compiler", "c", "x86_64","codegen"]
repository = "https://github.com/PhilippRados/wrecc"
description = "A x86_64 C99 compiler written from scratch"
readme = "README.md"

[dependencies]
wrecc_compiler = { path = "./wrecc_compiler/" }

[[bin]]
name = "wrecc"
path = "src/main.rs"

[workspace]
members = [
  "wrecc_compiler"
]

exclude = [
  "fuzzer"
]
